@@ -1,3 +1,9 @@
+2007-10-27  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_send_event_notification): don't show notification bubbles if
+			the status icon isn't visible
+
 2007-10-26  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-dialog.c
